[tool.poetry]
name = "sparkieee"
version = "0.1.0"
description = "Discord bot for IEEE at UCLA"
authors = ["IEEE at UCLA"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2023.3"
google-api-python-client = "^2.84.0"
google-auth-oauthlib = "^1.0.0"
setuptools = "^67.6.1"
firebase-admin = "^6.1.0"
discord-py = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
